--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "md-editor",
   "version": "0.1.0",
-  "homepage": "https://DemonDaddy22.github.io/md-editor/",
+  "homepage": "https://DemonDaddy22.github.io/MD-Editor/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
