--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-markdown": "^5.0.3",
     "react-scripts": "4.0.3",
+    "remark-gfm": "^1.0.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
