--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "4.0.3",
     "react-syntax-highlighter": "^15.4.3",
     "remark-gfm": "^1.0.0",
+    "remark-inline-links": "^5.0.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
